2011-01-08  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed wx build fix for r75313.

        * wscript: Added missing brace.

2011-01-07  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move WebCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=52050

        Update build files and metadata to point to WebCore's new location.

        * .gitattributes:
        * .gitignore:
        * Android.mk:
        * CMakeLists.txt:
        * DerivedSources.pro:
        * GNUmakefile.am:
        * Makefile:
        * Source/autotools/webkit.m4:
        * Source/cmake/OptionsEfl.cmake:
        * WebKit.pri:
        * WebKit.pro:
        * configure.ac:
        * wscript:

2011-01-06  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] Initial build support for WebGL
        https://bugs.webkit.org/show_bug.cgi?id=51716

        * configure.ac: Add a configure option for WebGL.

2011-01-06  Michael Saboff  <msaboff@apple.com>

        Reviewed by Gavin Barraclough.

        Enhancement: Add Regexp Debug Compare between JIT and Interpreter
        https://bugs.webkit.org/show_bug.cgi?id=51834

        * JavaScriptCore: Copied from JavaScriptCore.

2011-01-06  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Enable blob support by default
        https://bugs.webkit.org/show_bug.cgi?id=51994

        * configure.ac: Enable Blob support by default.

2011-01-05  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Andreas Kling.

        [CMake] Fix the usage of SOURCE_GROUP
        https://bugs.webkit.org/show_bug.cgi?id=51739

        * Source/cmake/WebKitMacros.cmake:

2011-01-05  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Andreas Kling.

        [WINCE] Remove CMake warning
        https://bugs.webkit.org/show_bug.cgi?id=51921

        * Source/cmake/WebKitHelpers.cmake:

2011-01-04  Martin Robinson  <mrobinson@igalia.com>
