@@ -1,3 +1,15 @@
+2011-01-10  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        [GTK] Create intermediate libWebCore library
+        https://bugs.webkit.org/show_bug.cgi?id=52116
+
+        Create intermediate libWebCore.la to avoid overflowing the linker
+        in the final link stage.
+
+        * GNUmakefile.am: define the new library.
+
 2011-01-09  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r75337.
