@@ -1,3 +1,13 @@
+2011-01-10  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        [GTK] Create intermediate libWebCore library
+        https://bugs.webkit.org/show_bug.cgi?id=52116
+
+        * GNUmakefile.am: add libWebCore.la to LIBADD and remove webcore
+        sources from the libwebkit library SOURCES.
+
 2011-01-09  Xianzhu Wang <phnixwxz@gmail.com>
 
         Reviewed by Darin Fisher.
